# diffusion2d

./: .gitignore  README.md  pyproject.toml
canselza_diffusion2d/: diffusion2d.py  output.py
