[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canselza_diffusion2d"
version = "0.0.6"
authors = [
  { name = "Ziya Can Selim", email = "st173375@stud.uni-stuttgart.de" },
]
description = "A python library for solving the diffusion equation with FDM."
readme = "README.md"
requires-python = ">=3.6"
keywords = ["diffusion", "visualization"]
license.file = "LICENSE"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy",
  "matplotlib",
]

[project.urls]
"Repository" = "https://github.com/ZiyaSelim/diffusion2d.git"

[project.scripts]
solve-diffusion2d = "canselza_diffusion2d.diffusion2d:solve"

[tool.setuptools]
packages = ["canselza_diffusion2d"]